css/quiz.css
#main-div {
  display: none;
}

#difficulty-tag {
  font-size: 25px;
}

#categorie {
  margin: 4vh 0;
  font-size: 30px;
}

#question {
  margin-top: 4vh;
  font-size: 2em;
}

#loading-div{
  display: none;
}

.quiz-button {
  padding: 50px 40px;
  margin: 40px 70px;
  border-radius: 10px;
  background-color: blueviolet;
  color: whitesmoke;
  font-size: 25px;
  width: 350px;
  outline: inherit;
  border: none;
}

#next-question {
  display: none;
  margin-bottom: 20px;
  margin-top: 40px;

  padding: 15px 10px;
  border-radius: 5px;

  background-color: grey;
  color: whitesmoke;
  font-size: 20px;
  width: 200px;
  outline: inherit;
  border: none;
}

#next-question:hover {
  transition: cubic-bezier(1, 0, 0, 1) 0.1s;
  cursor: pointer;
  transform: scale(1.07);
}

#rules{
  width: 50%;
}

#rules h2{
  margin: 3vh 0px;
}

#rules ul li{
  list-style: none;
}

.rule-title{
  font-size: 3em;
  text-decoration: underline;
  margin-bottom: 4vh;
}

#play-div{
  margin: 5vh 70px 0px ;
}



#play-button{
  margin-top: 4vh;
  padding: 2vw 2vw;

  border-radius: 10px;
  background-color: blueviolet;
  color: whitesmoke;
  font-size: 25px;
  width: 150px;
  outline: inherit;
  border: none;
  position: flex;

}

#play-button:hover{
  transition: cubic-bezier(1, 0, 0, 1) 0.1s;
  cursor: pointer;
  transform: scale(1.07);
}

.button-div {
  width: 100%;
  margin-top: 30px;
  margin-bottom: 20px;
}

.apply-shake {
  animation: shake 0.62s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
}

#clock {
	margin: auto;
  padding: 30px;
  border-radius: 50%;
  border: 2px solid blueviolet;
  display: flex;
  justify-content: center;
  text-align: center;

}

span {
  width: 30px;
  height: 30px;
	display: block;
	margin: auto;
  text-align: center;
	font-size: 2em;
}

@keyframes shake {
  10%,
  90% {
    transform: translate3d(-2px, 0, 0);
  }

  20%,
  80% {
    transform: translate3d(3px, 0, 0);
  }

  30%,
  50%,
  70% {
    transform: translate3d(-5px, 0, 0);
  }

  40%,
  60% {
    transform: translate3d(5px, 0, 0);
  }
}

@media only screen and (max-width: 800px) {
  #play-button{
    width: 150px;
    font-size: 1.5em;
    padding: 3vw 3vw;

  }

  #rules{
    width: 90%;
  }
  
  #rules h2{
    margin: 3vh 0px;
    font-size: 1.2em;
  }
  
  #rules ul li{
    list-style: none;
  }
  
  .rule-title{
    font-size: 2.5em;
    text-decoration: underline;
    margin-bottom: 4vh;
  }
  
  #play-div{
    margin: 1vh 0px 0px ;
  }

  #question {
    margin-top: 3vh;
    font-size: 25px;
  }

  #difficulty-tag {
    font-size: 18px;
  }
  
  #categorie {
    margin: 4vh 0;
    font-size: 20px;
  }

  .quiz-button {
    padding: 20px 10px;
    margin: 20px;
    border-radius: 10px;
    background-color: blueviolet;
    color: whitesmoke;
    font-size: 20px;
    width: 150px;
  }
  #clock {
    padding: 20px;
    border-radius: 50%;
    
  
  }
  
  span {
    width: 20px;
    height: 20px;
    font-size: 1.5em;
  }

}

@media only screen and (max-width: 320px) {
  #play-button{
    width: 120px;
    font-size: 1em;

  }

  #rules{
    width: 80%;
  }
  
  #rules h2{
    margin: 3vh 0px;
    font-size: 0.9em;
  }
  
  #rules ul li{
    list-style: none;
  }
  
  .rule-title{
    font-size: 1.3em;
    text-decoration: underline;
    margin-bottom: 4vh;
  }
  
  #play-div{
    margin: 3vh 0px 0px ;
  }

  #question {
    margin-top: 3vh;
    font-size:1em;
  }

  #difficulty-tag {
    font-size: 12px;
  }
  
  #categorie {
    margin: 4vh 0;
    font-size: 15px;
  }

  .quiz-button {
    padding: 15px 10px;
    margin: 40px;
    border-radius: 10px;
    background-color: blueviolet;
    color: whitesmoke;
    font-size: 15px;
    width: 120px;
  }

  #next-question {
    display: none;
    margin-bottom: 0px;
    margin-top: 20px;
  
    padding: 10px 10px;
    border-radius: 5px;
  
    background-color: grey;
    color: whitesmoke;
    font-size: 15px;
    width: 150px;
    outline: inherit;
    border: none;
  }

}

